k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: dgf
    labels:
spec:
    selector:
        app: dgf
    ports:
        - port: 80
          targetPort: 80
